<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActionBarSherlock" >

    <LinearLayout
        android:id="@+id/book_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/book_name_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/book_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/book_name_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/max_char"
            android:maxLength="70"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_author_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/book_author_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/book_author"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/book_author_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/max_char"
            android:maxLength="70"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/book_description_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.3"
            android:gravity="center_vertical|right"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/book_description_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/maximum_char"
            android:maxLength="255"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>