<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActionBarSherlock" >

    <LinearLayout
        android:id="@+id/book_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/message_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="right"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>