<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip" >

        <Button
            android:id="@+id/btn_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/orange"
            android:padding="10dip"
            android:text="@string/preferences"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_sqlite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/orange"
            android:padding="10dip"
            android:text="@string/sqlite"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ListView
        android:id="@+id/storage_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="15dip"
        android:layout_weight="1"
        android:background="@color/my_color"
        android:cacheColorHint="#00000000"
        android:divider="@color/grey_dark_color"
        android:dividerHeight="1px" >
    </ListView>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip"
        android:background="@color/orange"
        android:text="@string/close"
        android:textColor="@color/white" />

</LinearLayout>